refactor: implement new theme "Calma e Orgânica" with updated styles and icons across the app; enhance UI components for consistency and modern design

--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 		"userInterfaceStyle": "light",
 		"splash": {
 			"resizeMode": "contain",
-			"backgroundColor": "#3498DB"
+			"backgroundColor": "#F0EAD6"
 		},
 		"assetBundlePatterns": ["**/*"],
 		"ios": {
@@ -16,7 +16,7 @@
 		},
 		"android": {
 			"adaptiveIcon": {
-				"backgroundColor": "#3498DB"
+				"backgroundColor": "#F0EAD6"
 			},
 			"package": "com.controlefinanceiro.pessoal",
 			"versionCode": 1,
