--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "build:download": "eas build:download"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.3.0",
     "babel-preset-expo": "~54.0.0",
     "date-fns": "^3.6.0",
-    "expo": "~54.0.0",
-    "expo-asset": "~12.0.9",
+    "expo": "~54.0.25",
+    "expo-asset": "~12.0.10",
     "expo-crypto": "~15.0.7",
     "expo-sqlite": "~16.0.9",
     "expo-status-bar": "~3.0.8",
