--- a/eas.json
+++ b/eas.json
@@ -21,6 +21,17 @@
 	},
 	"submit": {
 		"production": {}
+	},
+	"update": {
+		"development": {
+			"channel": "development"
+		},
+		"preview": {
+			"channel": "preview"
+		},
+		"production": {
+			"channel": "production"
+		}
 	}
 }
 
