--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "build:android": "eas build --platform android --profile production",
     "build:android:preview": "eas build --platform android --profile preview",
     "build:list": "eas build:list",
-    "build:download": "eas build:download"
+    "build:download": "eas build:download",
+    "update:preview": "eas update --branch preview --message",
+    "update:production": "eas update --branch production --message",
+    "update:list": "eas update:list"
   },
   "dependencies": {
+    "@expo/image-utils": "^0.8.7",
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -25,8 +29,10 @@
     "expo": "~54.0.25",
     "expo-asset": "~12.0.10",
     "expo-crypto": "~15.0.7",
+    "expo-font": "~14.0.9",
     "expo-sqlite": "~16.0.9",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
@@ -41,7 +47,8 @@
     "@types/react": "~19.1.10",
     "jest": "^29.7.0",
     "jest-expo": "~54.0.0",
-    "react-test-renderer": "19.1.0"
+    "react-test-renderer": "19.1.0",
+    "sharp": "^0.34.5"
   },
   "overrides": {
     "@xmldom/xmldom": "^0.8.11"
