--- a/app.json
+++ b/app.json
@@ -26,7 +26,7 @@
 			"versionCode": 1,
 			"permissions": []
 		},
-		"plugins": ["expo-sqlite", "expo-asset", "expo-font", "expo-updates"],
+		"plugins": ["expo-sqlite", "expo-asset", "expo-font", "expo-updates", "expo-secure-store"],
 		"extra": {
 			"eas": {
 				"projectId": "cb452974-490d-4322-b989-7f9e2cfd07d5"
