--- a/package.json
+++ b/package.json
@@ -21,18 +21,21 @@
   "dependencies": {
     "@expo/image-utils": "^0.8.7",
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.3.0",
     "babel-preset-expo": "~54.0.0",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "expo": "~54.0.25",
     "expo-asset": "~12.0.10",
     "expo-crypto": "~15.0.7",
     "expo-font": "~14.0.9",
+    "expo-secure-store": "^15.0.7",
     "expo-sqlite": "~16.0.9",
     "expo-status-bar": "~3.0.8",
-    "expo-updates": "~29.0.12",
+    "expo-updates": "~29.0.13",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
