--- a/package.json
+++ b/package.json
@@ -1,60 +1,65 @@
 {
-  "name": "controle-financeiro-pessoal",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "lint": "eslint . --ext .js,.jsx",
-    "build:android": "eas build --platform android --profile production",
-    "build:android:preview": "eas build --platform android --profile preview",
-    "build:list": "eas build:list",
-    "build:download": "eas build:download",
-    "update:preview": "eas update --branch preview --message",
-    "update:production": "eas update --branch production --message",
-    "update:list": "eas update:list"
-  },
-  "dependencies": {
-    "@expo/image-utils": "^0.8.7",
-    "@expo/vector-icons": "^15.0.3",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.4.1",
-    "@reduxjs/toolkit": "^2.3.0",
-    "babel-preset-expo": "~54.0.0",
-    "date-fns": "^3.6.0",
-    "expo": "~54.0.25",
-    "expo-asset": "~12.0.10",
-    "expo-crypto": "~15.0.7",
-    "expo-font": "~14.0.9",
-    "expo-sqlite": "~16.0.9",
-    "expo-status-bar": "~3.0.8",
-    "expo-updates": "~29.0.12",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-calendars": "^1.1301.0",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-paper": "^5.12.5",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0",
-    "react-redux": "^9.2.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@testing-library/react-native": "^12.8.0",
-    "@types/react": "~19.1.10",
-    "jest": "^29.7.0",
-    "jest-expo": "~54.0.0",
-    "react-test-renderer": "19.1.0",
-    "sharp": "^0.34.5"
-  },
-  "overrides": {
-    "@xmldom/xmldom": "^0.8.11"
-  },
-  "private": true
+	"name": "controle-financeiro-pessoal",
+	"version": "1.0.0",
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"lint": "eslint . --ext .js,.jsx",
+		"build:android": "eas build --platform android --profile production",
+		"build:android:preview": "eas build --platform android --profile preview",
+		"build:list": "eas build:list",
+		"build:download": "eas build:download",
+		"update:preview": "eas update --branch preview --message",
+		"update:production": "eas update --branch production --message",
+		"update:list": "eas update:list"
+	},
+	"dependencies": {
+		"@expo/image-utils": "^0.8.7",
+		"@expo/vector-icons": "^15.0.3",
+		"@react-navigation/native": "^6.1.18",
+		"@react-navigation/stack": "^6.4.1",
+		"@reduxjs/toolkit": "^2.3.0",
+		"babel-preset-expo": "~54.0.0",
+		"date-fns": "^3.6.0",
+		"expo": "~54.0.25",
+		"expo-asset": "~12.0.10",
+		"expo-crypto": "~15.0.7",
+		"expo-font": "~14.0.9",
+		"expo-sqlite": "~16.0.9",
+		"expo-status-bar": "~3.0.8",
+		"expo-updates": "~29.0.13",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"react-native": "0.81.5",
+		"react-native-calendars": "^1.1301.0",
+		"react-native-gesture-handler": "~2.28.0",
+		"react-native-paper": "^5.12.5",
+		"react-native-safe-area-context": "~5.6.0",
+		"react-native-screens": "~4.16.0",
+		"react-native-web": "^0.21.0",
+		"react-redux": "^9.2.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.26.0",
+		"@testing-library/react-native": "^12.8.0",
+		"@types/react": "~19.1.10",
+		"jest": "^29.7.0",
+		"jest-expo": "~54.0.0",
+		"react-test-renderer": "19.1.0",
+		"sharp": "^0.34.5"
+	},
+	"overrides": {
+		"@xmldom/xmldom": "^0.8.11",
+		"react-native-safe-area-context": "~5.6.0"
+	},
+	"resolutions": {
+		"react-native-safe-area-context": "~5.6.0"
+	},
+	"private": true
 }
+
